--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
 div {
     padding-left: 25px;
+    padding-right: 25px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
+
+body {
+    background-color:lightsteelblue
+}
+
+footer {
+    min-height: 100%;
+    
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
