--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@ body {
     background-color:lightsteelblue
 }
 
-footer {
+footer, header {
     min-height: 100%;
+    padding: 10px;
     
 }
 
@@ -19,3 +20,9 @@ footer {
     margin-right: auto;
     width: 50%;
   }
+
+  .column {
+    width: 50%;
+    float:left;
+    text-align: center;
+}
